config: remove auth
